Use affix class and rules consistently / fix some parsing cases / stricter tests