@@ -38,32 +38,32 @@ class AffixesParserTest {
 
     // then
     assertThat(result.getFlagType(), nullValue());
-    assertThat(result.getRules(), hasSize(2));
+    assertThat(result.getAffixClasses(), hasSize(2));
 
-    ParsedRule prefixRule = result.getRules().stream().filter(rule -> "X".equals(rule.flag)).findFirst().orElseThrow();
-    assertThat(prefixRule.type, equalTo(AffixType.PFX));
-    assertThat(prefixRule.crossProduct, equalTo(true));
-    assertThat(prefixRule.rules, hasSize(2));
-    assertThat(prefixRule.rules.get(0).strip, equalTo(""));
-    assertThat(prefixRule.rules.get(0).append, equalTo("re"));
-    assertThat(prefixRule.rules.get(0).condition, equalTo("."));
-    assertThat(prefixRule.rules.get(1).strip, equalTo("dis"));
-    assertThat(prefixRule.rules.get(1).append, equalTo("un"));
-    assertThat(prefixRule.rules.get(1).condition, equalTo("dis"));
+    ParsedAffixClass prefixClass = result.getAffixClasses().stream().filter(rule -> "X".equals(rule.flag)).findFirst().orElseThrow();
+    assertThat(prefixClass.type, equalTo(AffixType.PFX));
+    assertThat(prefixClass.crossProduct, equalTo(true));
+    assertThat(prefixClass.rules, hasSize(2));
+    assertThat(prefixClass.rules.get(0).strip(), equalTo(""));
+    assertThat(prefixClass.rules.get(0).affix(), equalTo("re"));
+    assertThat(prefixClass.rules.get(0).condition(), equalTo("."));
+    assertThat(prefixClass.rules.get(1).strip(), equalTo("dis"));
+    assertThat(prefixClass.rules.get(1).affix(), equalTo("un"));
+    assertThat(prefixClass.rules.get(1).condition(), equalTo("dis"));
 
-    ParsedRule suffixRule = result.getRules().stream().filter(rule -> "N".equals(rule.flag)).findFirst().orElseThrow();
-    assertThat(suffixRule.type, equalTo(AffixType.SFX));
-    assertThat(suffixRule.crossProduct, equalTo(true));
-    assertThat(suffixRule.rules, hasSize(3));
-    assertThat(suffixRule.rules.get(0).strip, equalTo("e"));
-    assertThat(suffixRule.rules.get(0).append, equalTo("ion"));
-    assertThat(suffixRule.rules.get(0).condition, equalTo("e"));
-    assertThat(suffixRule.rules.get(1).strip, equalTo("y"));
-    assertThat(suffixRule.rules.get(1).append, equalTo("ication"));
-    assertThat(suffixRule.rules.get(1).condition, equalTo("y"));
-    assertThat(suffixRule.rules.get(2).strip, equalTo(""));
-    assertThat(suffixRule.rules.get(2).append, equalTo("en"));
-    assertThat(suffixRule.rules.get(2).condition, equalTo("[^ey]"));
+    ParsedAffixClass suffixClass = result.getAffixClasses().stream().filter(rule -> "N".equals(rule.flag)).findFirst().orElseThrow();
+    assertThat(suffixClass.type, equalTo(AffixType.SFX));
+    assertThat(suffixClass.crossProduct, equalTo(true));
+    assertThat(suffixClass.rules, hasSize(3));
+    assertThat(suffixClass.rules.get(0).strip(), equalTo("e"));
+    assertThat(suffixClass.rules.get(0).affix(), equalTo("ion"));
+    assertThat(suffixClass.rules.get(0).condition(), equalTo("e"));
+    assertThat(suffixClass.rules.get(1).strip(), equalTo("y"));
+    assertThat(suffixClass.rules.get(1).affix(), equalTo("ication"));
+    assertThat(suffixClass.rules.get(1).condition(), equalTo("y"));
+    assertThat(suffixClass.rules.get(2).strip(), equalTo(""));
+    assertThat(suffixClass.rules.get(2).affix(), equalTo("en"));
+    assertThat(suffixClass.rules.get(2).condition(), equalTo("[^ey]"));
   }
 
   /** Excerpt from da.aff. */
@@ -83,11 +83,11 @@ class AffixesParserTest {
 
     // then
     assertThat(result.getFlagType(), equalTo(AffixFlagType.NUMBER));
-    assertThat(result.getRules(), hasSize(1));
-    assertThat(result.getRules().getFirst().crossProduct, equalTo(false));
-    assertThat(result.getRules().getFirst().rules, hasSize(3));
-    assertThat(result.getRules().getFirst().rules.get(0).strip, equalTo(""));
-    assertThat(result.getRules().getFirst().rules.get(0).append, equalTo("bet/944"));
-    assertThat(result.getRules().getFirst().rules.get(0).condition, equalTo("b"));
+    assertThat(result.getAffixClasses(), hasSize(1));
+    assertThat(result.getAffixClasses().getFirst().crossProduct, equalTo(false));
+    assertThat(result.getAffixClasses().getFirst().rules, hasSize(3));
+    assertThat(result.getAffixClasses().getFirst().rules.get(0).strip(), equalTo(""));
+    assertThat(result.getAffixClasses().getFirst().rules.get(0).affix(), equalTo("bet/944"));
+    assertThat(result.getAffixClasses().getFirst().rules.get(0).condition(), equalTo("b"));
   }
 }
